<resources>
    <string name="app_name">ScanDrug</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scandrug">Scan<b>Drug</b></string>
    <string name="scan">Scan</string>
    <string name="notes">Some notes can be written in this space, to help user</string>
    <string name="buy_now">Buy now</string>
    <string name="city">City</string>
    <string name="confirm_pay_now"><![CDATA[Confirm & Pay Now]]></string>
    <string name="login_as">Login as</string>
    <string name="company">Company</string>
    <string name="delivery">Delivery</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_account">Already have account</string>
    <string name="user_name">User name</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="confirm_password">Confirm password</string>


    <string name="select_mode">Select App Theme Mode</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="system_mode">System</string>
    <string name="battery_mode">Battery</string>
    <string name="app_mode">App Theme</string>
    <string name="request_finance">REQUEST FINANCE</string>
    <string name="full_website">FULL WEBSITE</string>
    <string name="products_amp_services_2"><![CDATA[PRODUCTS\n&SERVICES]]></string>
    <string name="waiting">Waiting ...</string>
    <string name="check_your_connection">Check Your internet Connection</string>

    <string name="installment_calculator">INSTALLMENT\nCALCULATOR</string>
    <string name="about_us">ABOUT US</string>
    <string name="investment_opportunities">Investment\nopportunities</string>
    <string name="profile">Profile</string>
    <string name="home">HOME</string>
    <string name="welcome">WELCOME!</string>
    <string name="signUp">Sign up</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_not_valid">Please Enter Email and check the validity of it</string>
    <string name="password_char">Please Enter Password at least six digits</string>
    <string name="password_char2">Password should contains a capital letter, a small letter ,special character and eight digits(ex:Aa@12345678).</string>
    <string name="login_success_message">You have been successfully logged in</string>
    <string name="register_success_message">You have been successfully registered</string>
    <string name="drug_success_message">You have been successfully bought</string>

    <string name="email_not_exist">This Email is not exist Please try another</string>
    <string name="call_us_inside">Call us</string>
    <string name="social_media">SOCIAL MEDIA</string>
    <string name="chat">Leave a message</string>
    <string name="office_address">office ADDRESS</string>
    <string name="permission_denied">PermissionDenied</string>
    <string name="must_logged_in">\"You must logged in firstly  \"</string>
    <string name="email_reset">Enter your E-Mail</string>
    <string name="reset_password_back">RESET PASSWORD</string>
    <string name="reset">Reset</string>
    <string name="message_check_email">Please check your email \n To change your password</string>
    <string name="email_invalid">"Invalid Email please try again "</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_txt">Phone No.</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="id_number">ID No.</string>
    <string name="front_id">Front ID</string>
    <string name="back_id">Back ID</string>
    <string name="agreement_id">I Accept User Agreement.</string>
    <string name="agreement">AGREEMENT</string>
    <string name="verification">VERFICIATION</string>
    <string name="verification_number">Verification Code</string>
    <string name="verification_rsend_txt">Wait 60 Secs to Resend SMS</string>
    <string name="verify">Verify</string>
    <string name="rsend_sms">Resend SMS</string>
    <string name="first_name_error">Please Enter First Name and check the validity of it</string>
    <string name="last_name_error">Please Enter Last Name and check the validity of it</string>
    <string name="phone_error">Please Enter Mobile Number and check the validity of it(01xxx)</string>
    <string name="id_national_error">Please Enter National Id And Check Validity of it</string>
    <string name="confirm_password_error">"Confirm password must be the same password "</string>
    <string name="front_id_photo_error">\"Please select the front photo  of national Id \"</string>
    <string name="back_id_photo_error">\"Please select the back photo  of national Id \"</string>
    <string name="check_error_agreement">please accept the agreement rules</string>
    <string name="resend_time">Resend code in </string>
    <string name="resend_sms">Resend SMS</string>
    <string name="verification_number_error">Verification number must be 4 digits</string>
    <string name="phone_used_before">the phone number which has been used before </string>
    <string name="email_exist_already">User with this email already exist.</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="message">Your Message Here</string>
    <string name="send">Send</string>
    <string name="email_used_before">this email has been used before !</string>
    <string name="required_field">Required field</string>
    <string name="confirm">Confirm</string>
    <string name="scan_qrcode">Please Scan Invalid QR code!!</string>
    <string name="complete_requests">Complete requests</string>
    <string name="logout">Logout</string>
    <string name="shipped">Shipped</string>
    <string name="in_transit">In Transit</string>
    <string name="delivered">Delivered</string>
    <string name="cart">Cart</string>

</resources>