<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="deliveryOnClickView"
            type="com.scandrug.scandrug.presentation.home.delivery.fragments.DeliveryOnClickView" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.delivery.DeliveryActivity">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/dimens_16"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/scan_drug_blue"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toTopOf="@+id/img_product"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_product_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name"

        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_price"
        />




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stepper_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimens_16"
        app:layout_constraintBottom_toTopOf="@+id/tl_status"
        app:layout_constraintEnd_toEndOf="@+id/tl_status"
        app:layout_constraintStart_toStartOf="@+id/tl_status">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/dimens_40dp"
            android:layout_height="@dimen/dimens_40dp"
            android:scaleType="fitXY"
            android:layout_marginTop="@dimen/dimens_16"
            android:layout_marginStart="@dimen/dimens_16"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton2" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/dimens_40dp"
            android:layout_height="@dimen/dimens_40dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toStartOf="@+id/divider2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/divider" />


        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/dimens_40dp"
            android:layout_height="@dimen/dimens_40dp"
            android:layout_marginEnd="@dimen/dimens_16"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toTopOf="@+id/divider2" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/shipped"
            android:textAlignment="center"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/in_transit"
            android:textAlignment="center"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/delivered"
            android:textAlignment="center"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="22/2/2020"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="10sp"
            android:id="@+id/date_id"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView"
            app:layout_constraintStart_toStartOf="@+id/materialTextView"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_status"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Order Status"
        android:layout_margin="@dimen/dimens_16"
        app:layout_constraintBottom_toTopOf="@+id/materialButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <AutoCompleteTextView
            android:id="@+id/ac_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16"
        android:padding="@dimen/dimens_16"
        android:text="@string/confirm"
        android:onClick="@{()->deliveryOnClickView.confirmClicked()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>